Initial Commit for changes to QueryWriter.scala